[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/theme/user_interface.tres" type="Theme" id=1]
[ext_resource path="res://src/UserInterface/StartMenu.gd" type="Script" id=2]
[ext_resource path="res://assets/theme/fonts/kenney_mini_square.tres" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 3 )

[node name="StartMenu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.294118 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SignInButton" type="Button" parent="ColorRect"]
margin_left = 5.0
margin_top = 5.0
margin_right = 185.0
margin_bottom = 51.0
rect_min_size = Vector2( 180, 40 )
size_flags_horizontal = 4
text = "Sign In"

[node name="RefreshButton" type="Button" parent="ColorRect"]
margin_left = 25.0
margin_top = 100.0
margin_right = 205.0
margin_bottom = 146.0
rect_min_size = Vector2( 180, 40 )
rect_scale = Vector2( 0.5, 0.5 )
size_flags_horizontal = 4
text = "refresh"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerNameLabel" type="Label" parent="ColorRect"]
margin_left = 5.0
margin_top = 55.0
margin_right = 141.0
margin_bottom = 75.0
custom_fonts/font = SubResource( 1 )
text = "account.testnet"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BalanceLabel" type="Label" parent="ColorRect"]
margin_left = 5.0
margin_top = 80.0
margin_right = 141.0
margin_bottom = 100.0
custom_fonts/font = SubResource( 1 )
text = "Balance"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 150.0
margin_bottom = -130.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/CenterContainer"]
margin_left = 250.0
margin_right = 550.0
margin_bottom = 200.0
rect_min_size = Vector2( 300, 200 )
custom_constants/separation = 6
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="ColorRect/CenterContainer/VBoxContainer"]
margin_top = 38.0
margin_right = 300.0
margin_bottom = 58.0
rect_min_size = Vector2( 0, 20 )

[node name="StartButton" type="Button" parent="ColorRect/CenterContainer/VBoxContainer"]
margin_left = 60.0
margin_top = 64.0
margin_right = 240.0
margin_bottom = 110.0
rect_min_size = Vector2( 180, 40 )
size_flags_horizontal = 4
text = "Start"

[node name="ExitButton" type="Button" parent="ColorRect/CenterContainer/VBoxContainer"]
margin_left = 60.0
margin_top = 116.0
margin_right = 240.0
margin_bottom = 162.0
rect_min_size = Vector2( 180, 40 )
size_flags_horizontal = 4
text = "Exit"

[node name="Tween" type="Tween" parent="."]

[connection signal="pressed" from="ColorRect/SignInButton" to="." method="_on_SignInButton_pressed"]
[connection signal="pressed" from="ColorRect/RefreshButton" to="." method="_on_RefreshButton_pressed"]
[connection signal="pressed" from="ColorRect/CenterContainer/VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="ColorRect/CenterContainer/VBoxContainer/ExitButton" to="." method="_on_ExitButton_pressed"]
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_all_completed"]
